--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,56 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+*{
+    font-family: Inter;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+.nav{
+    display: flex;
+    justify-content: space-between;
+    padding: 2%;
+    align-items: center;
+    background-color: #21222A;
+    height: 10vh;
+}
+.nav-main{
+    display: flex;
+}
+.nav-heading{
+    margin-left: 5%;
+    color: #61DAFB;
+    width: 100%;
+}
+.nav-logo{
+    width: 60px;
+    height: auto;
+}
+.nav-subheading{
+    color: #DEEBF8;
+    font-weight: bold;
+}
+.main-content{
+    width: 100%;
+    height: 100vh;
+    background-color: #282D35;
+    padding: 5%;
+    color: white;
+    background-image: url(./assets/react2.png);
+    background-repeat: no-repeat;
+    background-position: 90% 10%;
+    background-size: 265px;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+.main-heading{
+    font-size: 3em;
 }
-a:hover {
-  color: #535bf2;
+.main-facts{
+    display: flex;
+    margin: 5%;
 }
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.facts-list > li {
+    margin-top: 5%;
 }
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.facts-list > li::marker {
+    color:#61DAFB;
+    font-size: 1.4rem;
 }
