--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@
     font-family: Inter;
     margin: 0;
     padding: 0;
-    overflow: hidden;
 }
 .nav{
     display: flex;
@@ -18,10 +17,10 @@
 .nav-heading{
     margin-left: 5%;
     color: #61DAFB;
-    width: 100%;
+
 }
 .nav-logo{
-    width: 60px;
+    width: 50px;
     height: auto;
 }
 .nav-subheading{
@@ -29,16 +28,15 @@
     font-weight: bold;
 }
 .main-content{
-    width: 100%;
     height: 100vh;
     background-color: #282D35;
-    padding: 5%;
     color: white;
+    padding: 5%;
     background-image: url(./assets/react2.png);
     background-repeat: no-repeat;
-    background-position: 90% 10%;
+    background-position: right 10%;
     background-size: 265px;
-
+    overflow: hidden;
 }
 .main-heading{
     font-size: 3em;
